--- a/iOSAppIndoor/Main.storyboard
+++ b/iOSAppIndoor/Main.storyboard
@@ -213,7 +213,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="593" y="133"/>
+            <point key="canvasLocation" x="697" y="133"/>
         </scene>
         <!--Log Controller-->
         <scene sceneID="4u2-4T-aYZ">
@@ -283,7 +283,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dLY-ec-eH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-354" y="133"/>
+            <point key="canvasLocation" x="-215" y="133"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Xy7-qK-MmJ">
@@ -467,7 +467,7 @@ It will receive notification from EEWSIndoor.</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X0I-oh-I5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2548" y="875"/>
+            <point key="canvasLocation" x="2545" y="875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kN5-VM-ywA">
@@ -565,6 +565,6 @@ It will receive notification from EEWSIndoor.</string>
         <image name="image4.jpg" width="600" height="724"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Pf9-rh-tmz"/>
+        <segue reference="NeL-pl-G1c"/>
     </inferredMetricsTieBreakers>
 </document>
